--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Not just playing around">
     
     
-    <link rel="preload" href="/ability-to-improve/assets/css/0.styles.192826cb.css" as="style"><link rel="preload" href="/ability-to-improve/assets/js/app.d78525cf.js" as="script"><link rel="preload" href="/ability-to-improve/assets/js/5.1d2ad7e1.js" as="script"><link rel="prefetch" href="/ability-to-improve/assets/js/2.74f89c66.js"><link rel="prefetch" href="/ability-to-improve/assets/js/3.7fe6446e.js"><link rel="prefetch" href="/ability-to-improve/assets/js/4.310d8c1f.js"><link rel="prefetch" href="/ability-to-improve/assets/js/6.e992f610.js"><link rel="prefetch" href="/ability-to-improve/assets/js/7.fee4cfe9.js">
+    <link rel="preload" href="/ability-to-improve/assets/css/0.styles.192826cb.css" as="style"><link rel="preload" href="/ability-to-improve/assets/js/app.72da5020.js" as="script"><link rel="preload" href="/ability-to-improve/assets/js/5.1d2ad7e1.js" as="script"><link rel="prefetch" href="/ability-to-improve/assets/js/2.74f89c66.js"><link rel="prefetch" href="/ability-to-improve/assets/js/3.7fe6446e.js"><link rel="prefetch" href="/ability-to-improve/assets/js/4.310d8c1f.js"><link rel="prefetch" href="/ability-to-improve/assets/js/6.e992f610.js"><link rel="prefetch" href="/ability-to-improve/assets/js/7.fee4cfe9.js">
     <link rel="stylesheet" href="/ability-to-improve/assets/css/0.styles.192826cb.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/ability-to-improve/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/ability-to-improve/assets/js/app.d78525cf.js" defer></script><script src="/ability-to-improve/assets/js/5.1d2ad7e1.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/ability-to-improve/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/ability-to-improve/assets/js/app.72da5020.js" defer></script><script src="/ability-to-improve/assets/js/5.1d2ad7e1.js" defer></script>
   </body>
 </html>
