--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Not just playing around">
     
     
-    <link rel="preload" href="/ability-to-improve/assets/css/0.styles.192826cb.css" as="style"><link rel="preload" href="/ability-to-improve/assets/js/app.a55fad93.js" as="script"><link rel="preload" href="/ability-to-improve/assets/js/5.e21312db.js" as="script"><link rel="prefetch" href="/ability-to-improve/assets/js/10.b17c5fab.js"><link rel="prefetch" href="/ability-to-improve/assets/js/11.86397c17.js"><link rel="prefetch" href="/ability-to-improve/assets/js/2.56a133bd.js"><link rel="prefetch" href="/ability-to-improve/assets/js/3.695b0b8f.js"><link rel="prefetch" href="/ability-to-improve/assets/js/4.310d8c1f.js"><link rel="prefetch" href="/ability-to-improve/assets/js/6.f98ba363.js"><link rel="prefetch" href="/ability-to-improve/assets/js/7.f6685700.js"><link rel="prefetch" href="/ability-to-improve/assets/js/8.4690fca6.js"><link rel="prefetch" href="/ability-to-improve/assets/js/9.d95abcf6.js">
+    <link rel="preload" href="/ability-to-improve/assets/css/0.styles.192826cb.css" as="style"><link rel="preload" href="/ability-to-improve/assets/js/app.58ad92bb.js" as="script"><link rel="preload" href="/ability-to-improve/assets/js/5.e21312db.js" as="script"><link rel="prefetch" href="/ability-to-improve/assets/js/10.b17c5fab.js"><link rel="prefetch" href="/ability-to-improve/assets/js/11.86397c17.js"><link rel="prefetch" href="/ability-to-improve/assets/js/2.56a133bd.js"><link rel="prefetch" href="/ability-to-improve/assets/js/3.695b0b8f.js"><link rel="prefetch" href="/ability-to-improve/assets/js/4.310d8c1f.js"><link rel="prefetch" href="/ability-to-improve/assets/js/6.bc56fa26.js"><link rel="prefetch" href="/ability-to-improve/assets/js/7.04dbfb1a.js"><link rel="prefetch" href="/ability-to-improve/assets/js/8.f2049401.js"><link rel="prefetch" href="/ability-to-improve/assets/js/9.be9d07ad.js">
     <link rel="stylesheet" href="/ability-to-improve/assets/css/0.styles.192826cb.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/ability-to-improve/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/ability-to-improve/assets/js/app.a55fad93.js" defer></script><script src="/ability-to-improve/assets/js/5.e21312db.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/ability-to-improve/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/ability-to-improve/assets/js/app.58ad92bb.js" defer></script><script src="/ability-to-improve/assets/js/5.e21312db.js" defer></script>
   </body>
 </html>
